recreate table stopped

--- a/newatt.html
+++ b/newatt.html
@@ -14,9 +14,9 @@
     <!-- Assuming you're calling the function from an event like a form submission -->
 
     <!-- Your form content here -->
-    <form action="" class="container" style="width: 50vw; margin-top: 5rem; margin-bottom: 4rem;">
+    <form action="" class="container" style="width: 80vw; margin-top: 5rem; margin-bottom: 4rem;">
         <div class="mb-3">
-            <label for="dob" class="form-label text-dark" style="margin-right: 12.6rem;">date of birth</label>
+            <label for="dob" class="form-label text-dark" style="margin-right: 10rem;">date of birth</label>
             <select name="day" id="day">
 
             <option value="">Day</option>
@@ -59,8 +59,8 @@
 
         <div class="mb-3">
 
-            <label for="grad" class="form-label text-dark">last sem exam end</label>
-            <select name="gradday" id="gradday" style="margin-left: 10rem;">
+            <label for="grad" class="form-label text-dark" style="margin-right: 10rem;">last sem exam end</label>
+            <select name="gradday" id="gradday">
 
             <option value="">Day</option>
             <script>
